tests/NormalTests/paczka1/small_fuzzy/70098005.err
Error in line 4: P9M4S7jgh A451 27,0
Error in line 6: 9CdeP17 S764 92,4
Error in line 5: P9M4S7jgh S764 32,5
Error in line 9: P9M4S7jgh A451 55,8
